--- a/contact.html
+++ b/contact.html
@@ -1,93 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Vitaly Ford smart grid security research">
-    <meta name="author" content="Vitaly Ford">
-    <link rel="icon" href="../../favicon.ico">
+---
+layout: default
+title: "Contact"
+permalink: "/contact/"
+---
 
-    <title>Vitaly Ford's Personal Website</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="css/navbar-fixed-top.css" rel="stylesheet">
-
-    <script src="js/ie-emulation-modes-warning.js"></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
-
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <p class="navbar-brand" href="#">Vitaly Ford</p>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="research.html">Research</a></li>
-            <li><a href="publications.html">Publications</a></li>
-            <li><a href="docs/VitalyFordResume.pdf" target="_blank" rel="noopener norefferer">Resume</a></li>
-            <li><a href="schedule.html">Schedule</a></li>
-            <li class="active"><a href="#contact">Contact</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                  aria-expanded="false">My Talks<span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                  <li><a href="docs/obscurity-in-cybersecurity.pdf" target="_blank" rel="noopener norefferer">Obscurity in Cybersecurity</a></li>
-                  <li><a href="docs/aws.pdf" target="_blank" rel="noopener norefferer">Cloud (AWS) Workshop</a></li>
-                  <li><a href="docs/VitalyFord-AMI-PrivacyDataMining.pdf" target="_blank" rel="noopener norefferer">AMI Privacy-preserving Data Mining</a></li>
-                  <li><a href="docs/VitalyFord-Energy-Fraud-Detection.pdf" target="_blank" rel="noopener norefferer">Energy Fraud Detection</a></li>
-                  <li><a href="docs/VitalyFord-GenCyberCoin-and-Cybersecurity-Principles.pdf" target="_blank" rel="noopener norefferer">GenCyberCoin and Cybersecurity Principles</a></li>
-                  <li><a href="docs/VitalyFord-NSF-CC-Arcadia-Case-Study.pdf" target="_blank" rel="noopener norefferer">NSF CC* Arcadia Case Study</a></li>
-              </ul>
-            </li>
-            <li><a href="et.html">Meet</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-
-    <div class="container">
-
-      <!-- Main component for a primary marketing message or call to action -->
-      <div class="jumbotron">
-        <h2><code> &gt;&gt; Contact information</code></h2>
-        <p style="padding-top: 20px;">Boyer Hall of Science 328, Arcadia University.</p>
-        <p>E-mail: fordv@arcadia.edu</p>
-      </div>
-
-    </div> <!-- /container -->
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
-    <script src="js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="js/ie10-viewport-bug-workaround.js"></script>
-  </body>
-</html>
+<div class="table-responsive lead">
+    <table class="table table-bordered table-hover">
+        <tbody>
+            <tr>
+                <td>Mail</td>
+                <td>
+                    Vitaly Ford
+                    <button type="button" class="btn btn-default btn-sm btn-copy js-tooltip js-copy" data-toggle="tooltip" data-placement="bottom" data-copy="Vitaly Ford
+450 S Easton Rd, Boyer Hall 328
+Glenside, PA 19038
+" title="Copy mailing address">
+                        <i class="far fa-copy"></i>
+                    </button>
+                    <br>
+                    450 S Easton Rd, Boyer Hall 328<br>
+                    Glenside, PA 19038
+                </td>
+            </tr>
+            <tr>
+                <td>Email</td>
+                <td>
+                    <span style="color: #0000ff;">fordv@arcadia.edu</span>
+                    <button type="button" class="btn btn-default btn-sm btn-copy js-tooltip js-copy" data-toggle="tooltip" data-placement="bottom" data-copy="fordv@arcadia.edu" title="Copy email">
+                        <i class="far fa-copy"></i>
+                    </button>
+                </td>
+            </tr>
+            <tr>
+                <td>Arcadia Profile</td>
+                <td><a href="https://www.arcadia.edu/profile/vitaly-ford" target="_blank" rel="noopener norefferer">https://www.arcadia.edu/profile/vitaly-ford</a></td>
+            </tr>
+        </tbody>
+    </table>
+</div>
