--- a/publications.html
+++ b/publications.html
@@ -1,102 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Vitaly Ford smart grid security research">
-    <meta name="author" content="Vitaly Ford">
-    <link rel="icon" href="../../favicon.ico">
+---
+layout: default
+title: "Publications"
+permalink: "/publications/"
+---
 
-    <title>Vitaly Ford's Personal Website</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="css/navbar-fixed-top.css" rel="stylesheet">
-
-    <script src="js/ie-emulation-modes-warning.js"></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
-
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <p class="navbar-brand" href="#">Vitaly Ford</p>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="research.html">Research</a></li>
-            <li class="active"><a href="#Publications">Publications</a></li>
-            <li><a href="docs/VitalyFordResume.pdf" target="_blank" rel="noopener norefferer">Resume</a></li>
-            <li><a href="schedule.html">Schedule</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                  aria-expanded="false">My Talks<span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                  <li><a href="docs/obscurity-in-cybersecurity.pdf" target="_blank" rel="noopener norefferer">Obscurity in Cybersecurity</a></li>
-                  <li><a href="docs/aws.pdf" target="_blank" rel="noopener norefferer">Cloud (AWS) Workshop</a></li>
-                  <li><a href="docs/VitalyFord-AMI-PrivacyDataMining.pdf" target="_blank" rel="noopener norefferer">AMI Privacy-preserving Data Mining</a></li>
-                  <li><a href="docs/VitalyFord-Energy-Fraud-Detection.pdf" target="_blank" rel="noopener norefferer">Energy Fraud Detection</a></li>
-                  <li><a href="docs/VitalyFord-GenCyberCoin-and-Cybersecurity-Principles.pdf" target="_blank" rel="noopener norefferer">GenCyberCoin and Cybersecurity Principles</a></li>
-                  <li><a href="docs/VitalyFord-NSF-CC-Arcadia-Case-Study.pdf" target="_blank" rel="noopener norefferer">NSF CC* Arcadia Case Study</a></li>
-              </ul>
-            </li>
-            <li><a href="et.html">Meet</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-
-    <div class="container">
-
-      <!-- Main component for a primary marketing message or call to action -->
-      <div class="jumbotron normal-text">
-        <h2 style="padding-bottom: 20px;"><code> &gt;&gt; Publications</code></h2>
-        <ul>
-          <li><a href="papers/Ford Tyler Siraj AMIsim.pdf" target="_blank" rel="noopener norefferer">V. Ford, D. Tyler, A. Siraj, “AMIsim: Application-layer Advanced Metering Infrastructure Simulation Framework for Secure Communication Protocol Performance Evaluation”, in Proceedings of the 11th USENIX Workshop on Cyber Security Experimentation and Test (CSET), August 2018.</a></li>
-          <li><a href="papers/Ford Siraj CTF-unplugged.pdf" target="_blank" rel="noopener norefferer">V. Ford, A. Siraj, A. Haynes, and E. L. Brown, “Capture the Flag Unplugged: An Offline Cyber Competition”, in Proceedings of the ACM Special Interest Group on Computer Science Education (SIGCSE) 2017.</a></li>
-          <li><a href="papers/Ford Siraj Rahman Privacy-Preserving Protocol for AMI.pdf" target="_blank" rel="noopener norefferer">V. Ford, A. Siraj, and M. A. Rahman, “Secure and Efficient Protection of Consumer Privacy in Advanced Metering Infrastructure Supporting Fine-grained Data Analysis”, Journal of Computer and System Sciences (Rank A*), in Press, July 2016.</a></li>
-          <li><a href="papers/Ford Siraj SecureComm 2015 extended abstract.pdf" target="_blank" rel="noopener norefferer">V. Ford and A. Siraj, “POSTER: Reliable and efficient protection of consumer privacy in Advanced Metering Infrastructure”, Institute for Computer Sciences, Social Informatics and Telecommunications Engineering 2015 B. Thuraisingham et al. (Eds.): SecureComm 2015, LNICST 164, pp. 563–566, 2015.</a></li>
-          <li><a href="papers/Cody Ford Siraj fraud detection.pdf" target="_blank" rel="noopener norefferer">C. Cody, V. Ford, and A. Siraj, “Decision Tree Learning for Fraud Detection in Consumer Energy Consumption”, in Proceedings of the 14th IEEE International Conference on Machine Learning and Applications, December 9-11, 2015.</a></li>
-          <li>V. Ford, “POSTER: Reliable and efficient protection of consumer privacy in Advanced Metering Infrastructure”, New York Institute of Technology Annual Cybersecurity Conference, September 24, 2015.</li>
-          <li><a href="papers/IEEE SSCI CIASG proceedings Ford Siraj Eberle.pdf" target="_blank" rel="noopener norefferer">V. Ford, A. Siraj, and W. Eberle, “Smart Grid Energy Fraud Detection Using Artificial Neural Networks”, in Proceedings of the 2014 IEEE Symposium Series on Computational Intelligence, December 9-12, 2014.</a></li>
-          <li><a href="papers/Ford Siraj Machine Learning in Cyber Security final manuscript.pdf" target="_blank" rel="noopener norefferer">V. Ford and A. Siraj, “Applications of Machine Learning in Cyber Security”, in Proceedings of the 27th International Conference on Computer Applications in Industry and Engineering, October 13-15, 2014.</a></li>
-          <li><a href="papers/For Siraj GlobalSIP Clustering for disaggregation of smart meter data.pdf" target="_blank" rel="noopener norefferer">V. Ford and A. Siraj, “Clustering of smart meter data for disaggregation”, in Proceedings of IEEE Global Conference on Signal and Information Processing, December 3-5, 2013.</a></li>
-        </ul>
-      </div>
-
-    </div> <!-- /container -->
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
-    <script src="js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="js/ie10-viewport-bug-workaround.js"></script>
-  </body>
-</html>
+{% for pub in site.data["pubs"] %}
+<p class="lead">{{ pub.year }}</p>
+<ul>
+    {% for paper in pub.papers %}
+        <li><p class="lead">{% if paper.url != "" %}<a href="{{ paper.url }}" target="_blank" rel="noopener norefferer">{{ paper.name }}</a>
+        {% else %}{{ paper.name }}
+        {% endif %}</li></p>
+    {% endfor %}
+</ul>
+{% unless forloop.last %}<hr>{% endunless %}
+{% endfor %}
