--- a/research.html
+++ b/research.html
@@ -1,140 +1,58 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Vitaly Ford smart grid security research">
-    <meta name="author" content="Vitaly Ford">
-    <link rel="icon" href="../../favicon.ico">
+---
+layout: default
+title: "Research Interests"
+permalink: "/research/"
+---
 
-    <title>Vitaly Ford's Personal Website</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="css/navbar-fixed-top.css" rel="stylesheet">
-
-    <script src="js/ie-emulation-modes-warning.js"></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
-
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <p class="navbar-brand" href="#">Vitaly Ford</p>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="#Research">Research</a></li>
-            <li><a href="publications.html">Publications</a></li>
-            <li><a href="docs/VitalyFordResume.pdf" target="_blank" rel="noopener norefferer">Resume</a></li>
-            <li><a href="schedule.html">Schedule</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                  aria-expanded="false">My Talks<span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                  <li><a href="docs/obscurity-in-cybersecurity.pdf" target="_blank" rel="noopener norefferer">Obscurity in Cybersecurity</a></li>
-                  <li><a href="docs/aws.pdf" target="_blank" rel="noopener norefferer">Cloud (AWS) Workshop</a></li>
-                  <li><a href="docs/VitalyFord-AMI-PrivacyDataMining.pdf" target="_blank" rel="noopener norefferer">AMI Privacy-preserving Data Mining</a></li>
-                  <li><a href="docs/VitalyFord-Energy-Fraud-Detection.pdf" target="_blank" rel="noopener norefferer">Energy Fraud Detection</a></li>
-                  <li><a href="docs/VitalyFord-GenCyberCoin-and-Cybersecurity-Principles.pdf" target="_blank" rel="noopener norefferer">GenCyberCoin and Cybersecurity Principles</a></li>
-                  <li><a href="docs/VitalyFord-NSF-CC-Arcadia-Case-Study.pdf" target="_blank" rel="noopener norefferer">NSF CC* Arcadia Case Study</a></li>
-              </ul>
-            </li>
-            <li><a href="et.html">Meet</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-
-    <div class="container">
-
-      <!-- Main component for a primary marketing message or call to action -->
-      <div class="jumbotron">
-        <h2 class="h1-padding"><code> &gt;&gt; Research interests</code></h2>
-        <div class="row">
-          <div class="col-md-3">
-            <img src="images/smartGrid.jpg" class="img-responsive img-square thumb-research" alt="Smart grid picture"/>
-            <p class="text-center text-info">Smart Grid Privacy/Security</p>
-          </div>
-          <div class="col-md-3">
-            <img src="images/cybersecurity.jpg" class="img-responsive img-square thumb-research" alt="Cybersecurity picture"/>
-            <p class="text-center text-info">Cybersecurity</p>
-          </div>
-          <div class="col-md-3">
-            <img src="images/machineLearning.jpg" class="img-responsive img-square thumb-research" alt="Machine learning picture"/>
-            <p class="text-center text-info">Machine Learning</p>
-          </div>
-          <div class="col-md-3">
-            <img src="images/education.jpg" class="img-responsive img-square thumb-research" alt="Education picture"/>
-            <p class="text-center text-info">Education</p>
-          </div>
-        </div>
-        <h3 style="padding-top: 20px;">My research interests</h3>
-        <ul style="font-size: 18px;">
-          <li>Smart Grid Security</li>
-          <li>Data Privacy for the Advanced Metering Infrastructure</li>
-          <li>Energy Fraud Detection</li>
-          <li>Machine Learning and Artificial Intelligence</li>
-          <li>Cybersecurity Education</li>
-        </ul>
-        <h3>Recent Projects</h3>
-        <ol style="font-size: 18px;">
-          <li>
-            <p><a href="https://github.com/vitalyford/gencybercoin" target="_blank" rel="noopener norefferer">GenCyberCoin</a> project has been sponsored by the NSA/NSF GenCyber program. GenCyberCoin is an incentive to encourage GenCyber camp students’ participation in camp activities. It teaches about:
-            <ul style="font-size: 18px;">
-              <li>Cryptocurrency concepts and digital currency trading markets</li>
-              <li>Cybersecurity principles</li>
-              <li>Bug bounty program and software bugs</li>
-              <li>Password management</li>
-              <li>Social and ethical norms and values</li>
-              <li>Blockchain</li>
-            </ul>
-            </p>
-          </li>
-          <li>
-            <p>Inspired by the Computer Science Unplugged project, I recently developed a Capture the Flag (CTF) Unplugged that is an offline cybersecurity competition for K-8 and K-12 schools. <a href="ctf-unplugged/CTF_Unplugged_May_2019.docx" target="_blank" rel="noopener norefferer">CTF Unplugged</a> introduces participants to cybersecurity competitions, shows different cybersecurity careers that they can pursue, and engages into a fun team-based competition without a need for technical preparation. For those who are interested in the project or would like to receive the answers to the CTF Unplugged, please contact me.</p>
-          </li>
-          <li>
-            <p>Another recent project I have worked on is about developing cybersecurity modules and curriculum for the <a href="https://www.tntech.edu/ceroc/outreach/gen-cyber" target="_blank" rel="noopener norefferer">GenCyber Camp at Tennessee Tech</a>. I lead a group at the <a href="https://www.tntech.edu/ceroc" target="_blank" rel="noopener norefferer">Cybersecurity Education Research and Outreach Center</a> that designed a month-long cybersecurity summer camp for the K-12 students in June 2016, and a week-long GenCyber camp in June 2017.</p>
-          </li>
-        </ol>
-        <h3>Collaboration</h3>
-        <p>I am open for collaboration on various cybersecurity, machine learning, and education projects.</p>
-      </div>
-
-    </div> <!-- /container -->
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
-    <script src="js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="js/ie10-viewport-bug-workaround.js"></script>
-  </body>
-</html>
+<div class="row">
+    <div class="col-md-3">
+    <img src="/assets/images/smartGrid.jpg" class="img-responsive img-square thumb-research" alt="Smart grid picture"/>
+    <p class="text-center text-info">Smart Grid Privacy/Security</p>
+    </div>
+    <div class="col-md-3">
+    <img src="/assets/images/cybersecurity.jpg" class="img-responsive img-square thumb-research" alt="Cybersecurity picture"/>
+    <p class="text-center text-info">Cybersecurity</p>
+    </div>
+    <div class="col-md-3">
+    <img src="/assets/images/machineLearning.jpg" class="img-responsive img-square thumb-research" alt="Machine learning picture"/>
+    <p class="text-center text-info">Machine Learning</p>
+    </div>
+    <div class="col-md-3">
+    <img src="/assets/images/education.jpg" class="img-responsive img-square thumb-research" alt="Education picture"/>
+    <p class="text-center text-info">Education</p>
+    </div>
+</div>
+<h3 style="padding-top: 20px;">My research interests</h3>
+<hr>
+<ul style="font-size: 18px;">
+    <li>Smart Grid Security</li>
+    <li>Data Privacy for the Advanced Metering Infrastructure</li>
+    <li>Energy Fraud Detection</li>
+    <li>Machine Learning and Artificial Intelligence</li>
+    <li>Cybersecurity Education</li>
+</ul>
+<h3>Recent Projects</h3>
+<hr>
+<ol style="font-size: 18px;">
+    <li>
+    <p><a href="https://github.com/vitalyford/gencybercoin" target="_blank" rel="noopener norefferer">GenCyberCoin</a> project has been sponsored by the NSA/NSF GenCyber program. GenCyberCoin is an incentive to encourage GenCyber camp students’ participation in camp activities. It teaches about:
+    <ul style="font-size: 18px;">
+        <li>Cryptocurrency concepts and digital currency trading markets</li>
+        <li>Cybersecurity principles</li>
+        <li>Bug bounty program and software bugs</li>
+        <li>Password management</li>
+        <li>Social and ethical norms and values</li>
+        <li>Blockchain</li>
+    </ul>
+    </p>
+    </li>
+    <li>
+    <p>Inspired by the Computer Science Unplugged project, I recently developed a Capture the Flag (CTF) Unplugged that is an offline cybersecurity competition for K-8 and K-12 schools. <a href="/ctf-unplugged/CTF_Unplugged_May_2019.docx" target="_blank" rel="noopener norefferer">CTF Unplugged</a> introduces participants to cybersecurity competitions, shows different cybersecurity careers that they can pursue, and engages into a fun team-based competition without a need for technical preparation. For those who are interested in the project or would like to receive the answers to the CTF Unplugged, please contact me.</p>
+    </li>
+    <li>
+    <p>Another recent project I have worked on is about developing cybersecurity modules and curriculum for the <a href="https://www.tntech.edu/ceroc/outreach/gen-cyber.php" target="_blank" rel="noopener norefferer">GenCyber Camp at Tennessee Tech</a>. I led a group at the <a href="https://www.tntech.edu/ceroc" target="_blank" rel="noopener norefferer">Cybersecurity Education Research and Outreach Center</a> that designed a month-long cybersecurity summer camp for the K-12 students in June 2016, and a week-long GenCyber camp in June 2017.</p>
+    </li>
+</ol>
+<h3>Collaboration</h3>
+<hr>
+<p>I am open for collaboration on various cybersecurity, machine learning, and education projects.</p>
