--- a/schedule.html
+++ b/schedule.html
@@ -1,167 +1,81 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Vitaly Ford smart grid security research">
-    <meta name="author" content="Vitaly Ford">
-    <link rel="icon" href="../../favicon.ico">
+---
+layout: default
+title: "Fall 2019 Schedule"
+permalink: "/schedule/"
+---
 
-    <title>Vitaly Ford's Personal Website</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="css/navbar-fixed-top.css" rel="stylesheet">
-
-    <script src="js/ie-emulation-modes-warning.js"></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
-
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <p class="navbar-brand" href="#">Vitaly Ford</p>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="research.html">Research</a></li>
-            <li><a href="publications.html">Publications</a></li>
-            <li><a href="docs/VitalyFordResume.pdf" target="_blank" rel="noopener norefferer">Resume</a></li>
-            <li class="active"><a href="schedule.html">Schedule</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                  aria-expanded="false">My Talks<span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                  <li><a href="docs/obscurity-in-cybersecurity.pdf" target="_blank" rel="noopener norefferer">Obscurity in Cybersecurity</a></li>
-                  <li><a href="docs/aws.pdf" target="_blank" rel="noopener norefferer">Cloud (AWS) Workshop</a></li>
-                  <li><a href="docs/VitalyFord-AMI-PrivacyDataMining.pdf" target="_blank" rel="noopener norefferer">AMI Privacy-preserving Data Mining</a></li>
-                  <li><a href="docs/VitalyFord-Energy-Fraud-Detection.pdf" target="_blank" rel="noopener norefferer">Energy Fraud Detection</a></li>
-                  <li><a href="docs/VitalyFord-GenCyberCoin-and-Cybersecurity-Principles.pdf" target="_blank" rel="noopener norefferer">GenCyberCoin and Cybersecurity Principles</a></li>
-                  <li><a href="docs/VitalyFord-NSF-CC-Arcadia-Case-Study.pdf" target="_blank" rel="noopener norefferer">NSF CC* Arcadia Case Study</a></li>
-              </ul>
-            </li>
-            <li><a href="et.html">Meet</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-
-    <div class="container">
-
-      <!-- Main component for a primary marketing message or call to action -->
-      <div class="jumbotron">
-        <h2><code> &gt;&gt; My schedule for Spring 2019</code></h2>
-        <br>
-        <p>Email - is the best way to reach me and set up a meeting if you have questions.</p>
-        <div class="table-responsive normal-text">
-    		<table class="table table-bordered table-hover">
-    			<thead>
-    				<tr>
-    					<th>Time</th>
-    					<th>M</th>
-    					<th>T</th>
-    					<th>W</th>
-    					<th>R</th>
-    					<th>F</th>
-    				</tr>
-    			</thead>
-    			<tbody>
-    				<tr>
-    					<th>08:00 - 09:00</th>
-    					<td></td>
-    					<td rowspan="4" class="custom-table RandD">R &amp; D</td>
-    					<td></td>
-              <td rowspan="4" class="custom-table RandD">R &amp; D</td>
-    					<td></td>
-    				</tr>
-    				<tr>
-    					<th>09:00 - 09:30</th>
-    					<td></td>
-    					<td></td>
-    					<td></td>
-    				</tr>
-    				<tr>
-    					<th>09:45 - 10:50</th>
-    					<td class="custom-table course1">CS 358<br>Boyer Hall 008</td>
-              <td class="custom-table course1">CS 358<br>Boyer Hall 008</td>
-              <td class="custom-table course1">CS 358<br>Boyer Hall 008</td>
-    				</tr>
-    				<tr>
-    					<th>11:00 - 12:05</th>
-              <td class="custom-table course2">CS 285<br>Boyer Hall 014</td>
-    					<td class="custom-table course2">CS 285<br>Boyer Hall 014</td>
-    					<td class="custom-table course2">CS 285<br>Boyer Hall 014</td>
-    				</tr>
-    				<tr>
-    					<th>12:10 - 01:30</th>
-    					<td></td>
-    					<td></td>
-    					<td></td>
-    					<td></td>
-    					<td></td>
-    				</tr>
-    				<tr>
-    					<th>01:30 - 03:00</th>
-              <td class="custom-table">Office Hours</td>
-    					<td></td>
-    					<td class="custom-table">Office Hours</td>
-    					<td></td>
-    					<td></td>
-    				</tr>
+<p class="lead">Email - is the best way to reach me and set up a meeting if you have questions.</p>
+<div class="table-responsive normal-text">
+    <table class="table table-bordered table-hover">
+        <thead>
             <tr>
-    					<th>03:00 - 04:00</th>
-              <td></td>
-    					<td></td>
-              <td></td>
-    					<td></td>
-              <td></td>
-    				</tr>
-    				<tr>
-    					<th>04:00 - 05:40</th>
-              <td class="custom-table course3">Capstone<br>Boyer Hall 014</td>
-    					<td></td>
-    					<td class="custom-table course3">Capstone<br>Boyer Hall 014</td>
-    					<td></td>
-    					<td></td>
-    				</tr>
-    			</tbody>
-    		</table>
-        </div>
-      </div>
-
-    </div> <!-- /container -->
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
-    <script src="js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="js/ie10-viewport-bug-workaround.js"></script>
-  </body>
-</html>
+                <th>Time</th>
+                <th>M</th>
+                <th>T</th>
+                <th>W</th>
+                <th>R</th>
+                <th>F</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th>08:00 - 09:00</th>
+                <td></td>
+                <td rowspan="4" class="custom-table RandD">R &amp; D</td>
+                <td></td>
+                <td rowspan="4" class="custom-table RandD">R &amp; D</td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>09:00 - 09:30</th>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>09:45 - 10:50</th>
+                <td class="custom-table course1">CS 362<br>Boyer Hall 008</td>
+                <td class="custom-table course1">CS 362<br>Boyer Hall 008</td>
+                <td class="custom-table course1">CS 362<br>Boyer Hall 008</td>
+            </tr>
+            <tr>
+                <th>11:00 - 12:05</th>
+                <td class="custom-table course2">CS 203<br>Boyer Hall 014</td>
+                <td class="custom-table course2">CS 203<br>Boyer Hall 014</td>
+                <td class="custom-table course2">CS 203<br>Boyer Hall 014</td>
+            </tr>
+            <tr>
+                <th>12:10 - 01:30</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>01:30 - 03:00</th>
+                <td class="custom-table">Office Hours</td>
+                <td></td>
+                <td class="custom-table">Office Hours</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>03:00 - 04:00</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>04:00 - 05:40</th>
+                <td class="custom-table course3">Capstone<br>Boyer Hall 014</td>
+                <td></td>
+                <td class="custom-table course3">Capstone<br>Boyer Hall 014</td>
+                <td></td>
+                <td></td>
+            </tr>
+        </tbody>
+    </table>
+</div>
